--- a/.github/workflows/scan-code.yml
+++ b/.github/workflows/scan-code.yml
@@ -15,8 +15,8 @@ jobs:
       - id: govulncheck
         uses: golang/govulncheck-action@v1
         with:
-           work-dir: image/src
-           go-version-file: image/src/go.mod
+           work-dir: src
+           go-version-file: src/go.mod
   
   build_job:
     name: Build and Test Docker Image
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
@@ -48,8 +48,6 @@ jobs:
       - name: Build Image
         uses: docker/build-push-action@v6
         with: 
-          context: ./image
-          file: ./image/Dockerfile
           platforms: linux/amd64
           load: true
           tags: ghcr.io/${{ env.REPO_NAME }}:${{ github.sha }}
@@ -61,8 +59,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          context: ./image
-          file: ./image/Dockerfile
           platforms: linux/amd64
           push: true
           tags: ghcr.io/${{ env.REPO_NAME }}:${{ github.sha }}
