--- a/.github/workflows/scan-code.yml
+++ b/.github/workflows/scan-code.yml
@@ -1,11 +1,12 @@
 name: CodeScan
 
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
+on:
+  [push]
 
-on: [push]
+
+env:
+  # Use docker.io for Docker Hub if empty
+  REGISTRY: ghcr.io
 
 jobs:
   govulncheck_job:
@@ -33,7 +34,7 @@ jobs:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       # - name: Extract Docker metadata
@@ -51,16 +52,16 @@ jobs:
         with: 
           platforms: linux/amd64
           load: true
-          tags: ghcr.io/${{ env.REPO_NAME }}:${{ github.sha }}
+          tags: ${{ env.REGISTRY }}/${{ env.REPO_NAME }}:${{ github.sha }}
       - name: Run Trivy Vulnerability Scanner
         uses: aquasecurity/trivy-action@0.20.0
         with:
-          image-ref: 'ghcr.io/${{ env.REPO_NAME }}:${{ github.sha }}'
+          image-ref: '${{ env.REGISTRY }}/${{ env.REPO_NAME }}:${{ github.sha }}'
           format: 'table'
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
           platforms: linux/amd64
           push: true
-          tags: ghcr.io/${{ env.REPO_NAME }}:${{ github.sha }}
+          tags: ${{ env.REGISTRY }}/${{ env.REPO_NAME }}:${{ github.sha }}
   
