--- a/.github/workflows/scan-publish.yml
+++ b/.github/workflows/scan-publish.yml
@@ -1,7 +1,15 @@
-name: CodeScan
+name: Scan and Publish Docker Image
 
 on:
   [push]
+
+# on:
+#   push:
+#     branches: [ main ]
+#     # Publish semver tags as releases.
+#     tags: [ 'v*.*.*' ]
+#   pull_request:
+#     branches: [ main ]
 
 
 env:
