--- a/.github/workflows/scan-publish.yml
+++ b/.github/workflows/scan-publish.yml
@@ -91,6 +91,7 @@ jobs:
           platforms: linux/amd64
           push: true
           sbom: true
+          provenance: mode=max
           tags: |
             ${{ env.REGISTRY }}/${{ env.REPO_NAME }}:${{ github.sha }}
             ${{ env.REGISTRY }}/${{ env.REPO_NAME }}:latest
