--- a/.github/workflows/scan-publish.yml
+++ b/.github/workflows/scan-publish.yml
@@ -1,13 +1,10 @@
 name: Scan and Publish Docker Image
 
 on:
-  [push]
-
-# on:
-#   push:
-#     branches: [ main ]
-#     # Publish semver tags as releases.
-#     tags: [ 'v*.*.*' ]
+  push:
+    branches: [ main ]
+    # Publish semver tags as releases.
+    tags: [ 'v*.*.*' ]
 #   pull_request:
 #     branches: [ main ]
 
