--- a/.github/workflows/scan-publish.yml
+++ b/.github/workflows/scan-publish.yml
@@ -1,12 +1,12 @@
 name: Scan and Publish Docker Image
 
 on:
-  push:
-    branches: [ main ]
-    # Publish semver tags as releases.
-    tags: [ 'v*.*.*' ]
-#   pull_request:
-#     branches: [ main ]
+  [ push ]
+  #   branches: [ main ]
+  #   # Publish semver tags as releases.
+  #   tags: [ 'v*.*.*' ]
+  # pull_request:
+  #     branches: [ main ]
 
 
 env:
@@ -41,6 +41,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Cosign
+        if: ${{ github.event_name != 'pull_request' }}
         uses: sigstore/cosign-installer@v3.6.0
 
       - name: Set up QEMU
@@ -60,7 +61,12 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.REPO_NAME }}:${{ github.sha }}
+          images: ${{ env.REGISTRY }}/${{ env.REPO_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
 
       - name: Clean Repository Name
         id: toLowerCase
@@ -82,20 +88,25 @@ jobs:
           format: 'table'
 
       - name: Build and push
+        if: ${{ github.event_name != 'pull_request' }}
         id: push-step
         uses: docker/build-push-action@v6
         with:
+          context: .
           platforms: linux/amd64
-          push: true
-          sbom: true
+          push: false
+          #sbom: true
           labels: ${{ steps.meta.outputs.labels }}
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.REPO_NAME }}:${{ github.sha }}
-            ${{ env.REGISTRY }}/${{ env.REPO_NAME }}:latest
+          tags: ${{ steps.meta.outputs.tags }}
+          #|
+          #  ${{ env.REGISTRY }}/${{ env.REPO_NAME }}:${{ github.sha }}
+          #  ${{ env.REGISTRY }}/${{ env.REPO_NAME }}:latest
 
-      - name: Print cosign version
-        run: cosign version
+      # - name: Print cosign version
+      #   if: ${{ github.event_name != 'pull_request' }}
+      #   run: cosign version
 
-      - name: Sign the container image
-        run: cosign sign -y ${{ env.REGISTRY }}/${{ env.REPO_NAME }}:${{ github.sha }}@${{ steps.push-step.outputs.digest }} ${{ env.REGISTRY }}/${{ env.REPO_NAME }}:latest@${{ steps.push-step.outputs.digest }}
+      # - name: Sign the container image
+      #   if: ${{ github.event_name != 'pull_request' }}
+      #   run: cosign sign -y ${{ env.REGISTRY }}/${{ env.REPO_NAME }}:${{ github.sha }}@${{ steps.push-step.outputs.digest }} ${{ env.REGISTRY }}/${{ env.REPO_NAME }}:latest@${{ steps.push-step.outputs.digest }}
   
