--- a/kubernetes/daemonset.yaml
+++ b/kubernetes/daemonset.yaml
@@ -17,12 +17,10 @@ spec:
       hostPID: true
       containers:
       - name: aks-auditd
-        image: myacr.azurecr.io/aksauditd
-        command: ["/app/aks-auditd"]
+        image: ghcr.io/kipidestan/aks-auditd:latest
         volumeMounts:
         - name: node
           mountPath: /node
-          readOnly: false
         - name: auditd-rules
           mountPath: /auditd-rules
         - name: audisp-plugins
