auditd-aks binary changes to run as init and poll mode to support initContainers

--- a/kubernetes/daemonset.yaml
+++ b/kubernetes/daemonset.yaml
@@ -15,9 +15,25 @@ spec:
         name: aks-auditd
     spec:
       hostPID: true
+      initContainers:
+      - name: init
+        image: ghcr.io/kipidestan/aks-auditd:latest
+        command: ["/app/aks-auditd", "--mode", "init"]
+        volumeMounts:
+        - name: node
+          mountPath: /node
+          readOnly: false
+        - name: auditd-rules
+          mountPath: /auditd-rules
+        - name: audisp-plugins
+          mountPath: /audisp-plugins
+        imagePullPolicy: Always
+        securityContext:
+          privileged: true
       containers:
       - name: aks-auditd
         image: ghcr.io/kipidestan/aks-auditd:latest
+        command: ["/app/aks-auditd", "--mode", "poll"]
         volumeMounts:
         - name: node
           mountPath: /node
