--- a/Dockerfile.init
+++ b/Dockerfile.init
@@ -5,15 +5,15 @@ FROM mcr.microsoft.com/azurelinux/base/core:3.0 AS base
 WORKDIR /app
 
 # Copy source code
-COPY src/*.go ./
+COPY src/aks-auditd-init/*.go ./
 COPY scripts/get_golang.sh ./
 
-# Copy example config file
+# Copy example config file to the container. Don't change this path. It is hardcoded in go code
 RUN mkdir -p /etc/aks-auditd
 COPY config.yaml /etc/aks-auditd/config.yaml
 
 # Update tdnf and install requirements for updating golang
-RUN tdnf update \
+RUN tdnf update -y \
     && tdnf install -y ca-certificates tar
 
 # Install a specific Go version to get around any security issues not in the Azure Linux golang package
@@ -21,9 +21,9 @@ ENV GO_BASE_PATH="/tmp" PATH="/tmp/go/bin:${PATH}"
 RUN chmod +x get_golang.sh && ./get_golang.sh
 
 # Compile the binary
-RUN go mod init aksauditd \
+RUN go mod init aksauditdinit \
     && go mod tidy \
-    && GOARCH=amd64 CGO_ENABLED=0 GOOS=linux go build -ldflags="-s -w" -o aks-auditd main.go
+    && GOARCH=amd64 CGO_ENABLED=0 GOOS=linux go build -ldflags="-s -w" -o aks-auditd-init main.go
 
 FROM mcr.microsoft.com/azurelinux/distroless/minimal:3.0 AS final
 
@@ -33,11 +33,9 @@ LABEL org.opencontainers.image.licenses=GPLv3
 
 WORKDIR /app
 
-COPY --from=base /app/aks-auditd .
+COPY --from=base /app/aks-auditd-init .
 COPY --from=base /etc/aks-auditd /etc/aks-auditd
 
 VOLUME /node
-VOLUME /auditd-rules
-VOLUME /audisp-plugins
 
-ENTRYPOINT ["/app/aks-auditd"]
+ENTRYPOINT ["/app/aks-auditd-init"]
