--- a/kubernetes/daemonset.yaml
+++ b/kubernetes/daemonset.yaml
@@ -14,21 +14,31 @@ spec:
       labels:
         name: aks-auditd
     spec:
-      hostPID: true
+      hostPID: true   # This is required because of the systemctl command in aks-auditd-init. The container needs access to the host PID namespace to restart the auditd service.
       initContainers:
       - name: init
         #image: ghcr.io/kipidestan/aks-auditd:latest
-        image: auditacrtest123.azurecr.io/aks-auditd-init:22
+        image: acr1243thisismine.azurecr.io/aks-auditd-init:34
+        env:
+        - name: AA_LOG_LEVEL
+          value: debug
         volumeMounts:
         - name: node
           mountPath: /node
         imagePullPolicy: Always
         securityContext:
           privileged: true
+          capabilities:
+            drop:
+            - ALL
+            add:
+            - SYS_CHMOD
+            - SYS_CHOWN
+            - SYS_CHROOT
       containers:
       - name: aks-auditd
         #image: ghcr.io/kipidestan/aks-auditd:latest
-        image: auditacrtest123.azurecr.io/aks-auditd:18
+        image: acr1243thisismine.azurecr.io/aks-auditd:23
         env:
         - name: AA_LOG_LEVEL
           value: debug
@@ -41,9 +51,11 @@ spec:
           mountPath: /audisp-plugins
         imagePullPolicy: Always
         securityContext:
-          privileged: true
-          # runAsUser: 807
-          # runAsGroup: 808
+          runAsUser: 807
+          runAsGroup: 808
+          capabilities:
+            drop:
+            - ALL
       volumes:
       - name: node
         hostPath:
