--- a/.github/workflows/scan-publish.yml
+++ b/.github/workflows/scan-publish.yml
@@ -101,6 +101,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
+          file: 'Dockerfile.${{ matrix.image-name }}'
           platforms: linux/amd64
           push: ${{ github.event_name != 'pull_request' }}
           sbom: true
