--- a/.github/workflows/scan-publish.yml
+++ b/.github/workflows/scan-publish.yml
@@ -42,7 +42,7 @@ jobs:
     
     strategy:
       matrix:
-        image-name: [ aks-auditd-init, aks-auditd ] 
+        image-name: [ aks-auditd ] 
 
     steps:
       - name: Checkout repository
