Direct mounts for node filesystem
Mount /etc/audit/rules.d and /etc/audit/plugins.d to their own volumes within the container
to further isolate where config maps can be copied to

--- a/Dockerfile.aks-auditd
+++ b/Dockerfile.aks-auditd
@@ -36,8 +36,9 @@ WORKDIR /app
 COPY --from=base /app/aks-auditd .
 COPY --from=base /etc/aks-auditd /etc/aks-auditd
 
-VOLUME /node
 VOLUME /auditd-rules
+VOLUME /auditd-rules-target
 VOLUME /audisp-plugins
+VOLUME /audisp-plugins-target
 
 ENTRYPOINT ["/app/aks-auditd"]
