--- a/kubernetes/configmap/auditd-plugins.yaml
+++ b/kubernetes/configmap/auditd-plugins.yaml
@@ -21,7 +21,7 @@ data:
     direction = out
     path = /sbin/audisp-syslog
     type = always
-    args = LOG_INFO
+    args = LOG_INFO LOG_LOCAL0
     format = string
     
 
