--- a/Dockerfile.aks-auditd-init
+++ b/Dockerfile.aks-auditd-init
@@ -49,5 +49,6 @@ COPY --from=base /app/aks-auditd-monitor/aks-auditd-monitor.service .
 COPY --from=base /etc/aks-auditd /etc/aks-auditd
 
 VOLUME /node
+VOLUME /audispd-plugins
 
 ENTRYPOINT ["/app/aks-auditd-init"]
